<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JatxMusic Receiver</string>
    
    <string name="string_ok">Ok</string>
    <string name="string_exit">Exit</string>
    <string name="string_start">Start</string>
    <string name="string_stop">Stop</string>
    <string name="string_auto_connect">Auto Connect</string>
    <string name="string_input_host">Hostname or IP-address of Transmitter</string>
    
    <string name="toast_disconnect">Disconnect Occured</string>
    <string name="toast_empty_host">Hostname cannot be empty</string>
    
    <string name="item_review_app">Review App</string>
	<string name="item_transmitter_android">Transmitter for Android</string>
	<string name="item_javafx_version">Version for JavaFX</string>
	<string name="item_receiver_javafx">Receiver for JavaFX</string>
	<string name="item_transmitter_javafx">Transmitter for JavaFX</string>
	<string name="item_source_code">Source Code</string>
	<string name="item_dev_site">Developer Site</string>

</resources>
