<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:yourapp="http://schemas.android.com/apk/res-auto"
>      
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_question"
        android:title=""
        yourapp:showAsAction="always" >
        
        <menu>
        	<group>
        	    <item android:id="@+id/item_review_app" android:title="@string/item_review_app"></item>
        	    <item android:id="@+id/item_transmitter_android" android:title="@string/item_transmitter_android"></item>
        	    <!-- <item android:id="@+id/item_javafx_version" android:title="@string/item_javafx_version"></item> -->
        	    <item android:id="@+id/item_receiver_javafx" android:title="@string/item_receiver_javafx"></item>
        	    <item android:id="@+id/item_transmitter_javafx" android:title="@string/item_transmitter_javafx"></item>
        	    <item android:id="@+id/item_source_code" android:title="@string/item_source_code"></item>
        	    <item android:id="@+id/item_dev_site" android:title="@string/item_dev_site"></item>
	    	</group>
	    </menu>
        
    </item>
        
</menu>
