<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical" >
    
    <Spinner
    	android:id="@+id/select_dialog_host_spinner"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_empty_height"
        />
    
    <EditText
    	android:id="@+id/select_dialog_host_edit"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/string_input_host"
    	/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_empty_height"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	<Button
    		android:id="@+id/select_dialog_ok_button"
    		android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/string_ok"
    		/>
    
    	<Button
    		android:id="@+id/select_dialog_exit_button"
    		android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/string_exit"
    		/>
    </LinearLayout>

</LinearLayout>
